Avoids chart label overflow, adds active class for attr selector

--- a/src/sass/_device.scss
+++ b/src/sass/_device.scss
@@ -156,25 +156,29 @@
   padding: 0px !important;
   position: relative;
 
-  .attr-line
-  {
+  .attr-line {
     height: 80px;
     background: #FAFAFA;
     width: 100%;
     display: inline-block;
 
-    a{
+    &.active {
+      color: black;
+      background: #EDEDED;
+    }
+
+    a {
       padding: 16px 37px;
       width: 100%;
       height: 100%;
       display: block;
     }
-    a:hover{
+    a:hover {
       color:black;
       background: #EDEDED;
     }
 
-    .attr-name{
+    .attr-name {
       display: block;
       font-family: 'Roboto';
       font-weight: bold;
@@ -184,7 +188,7 @@
       color: #4F4F4F;
     }
 
-    title{
+    title {
       font-family: 'Roboto', sans-serif;
       font-weight: bold;
       font-size: 17px;
@@ -193,14 +197,13 @@
       color: #4F4F4F;
     }
 
-    span{
+    span {
       font-family: 'Open Sans', 'Roboto', sans-serif;
       font-weight: bold;
       font-size: 13px;
       letter-spacing: 0.39px;
       color: #BDBDBD;
     }
-
   }
 }
 
